[package]
name = "pushr"
version = "0.4.1"
authors = ["johker <johannes.kern@zoho.com>"]
edition = "2018"
description = "Pushr is a Rust based interpreter for Push programs."
repository = "https://github.com/johker/pushr/"
license = "MIT"
keywords = ["push", "evolutionary", "stack-based", "genetic", "interpreter"]
readme = "README.md"
categories = ["compilers"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.0"
rand_distr = "0.4.1"
names = "0.10.0"
num-bigint = "0.4"
num-traits = "0.2"
num-integer = "0.1"

[[bin]]
name = "pushr"
path = "src/main.rs"
